# testes-4

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  deps.py  main.py  models.py  schemas.py
app/static/: styles.css
app/templates/: index.html
tests/: test_api.py
